fixup image stretching

--- a/app/styles/components/photo-carousel.scss
+++ b/app/styles/components/photo-carousel.scss
@@ -56,13 +56,22 @@
     .frame {
       display: flex;
       flex-direction: column;
+      align-items: center;
+      align-content: center;
       justify-content: center;
       padding: 0;
-      min-height: 80vh;
+      height: 80vh;
+      overflow: hidden;
       img {
+        display:inline-block;
         height: auto;
-        max-width: 100vw
+        max-height: 80vh;
+        max-width: 100vw;
       }
+    }
+
+    .toolbar {
+      padding: 0;
     }
   }
 }
